@@ -1,3 +1,6 @@
+2007-07-01  Maximilien Cuony
+	* Option to disable auto-update
+
 2007-06-24  Maximilien Cuony
 	* 0.4.2.1 repacked, and uploaded to the server !
 	* Apply diff of 22/06 for gpgAuth
